// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppController (e2e) should support requesting a page of pokemons (default order is by ID) 1`] = `
Object {
  "items": Array [
    Object {
      "attacks": Object {
        "fast": Array [
          Object {
            "damage": 6,
            "name": "Scratch",
            "type": "Normal",
          },
          Object {
            "damage": 10,
            "name": "Ember",
            "type": "Fire",
          },
        ],
        "special": Array [
          Object {
            "damage": 55,
            "name": "Flamethrower",
            "type": "Fire",
          },
          Object {
            "damage": 25,
            "name": "Flame Charge",
            "type": "Fire",
          },
          Object {
            "damage": 30,
            "name": "Flame Burst",
            "type": "Fire",
          },
        ],
      },
      "classification": "Lizard Pokémon",
      "evolutionRequirements": Object {
        "amount": 25,
        "name": "Charmander candies",
      },
      "evolutions": Array [
        Object {
          "id": "006",
          "name": "Charizard",
        },
        Object {
          "id": "005",
          "name": "Charmeleon",
        },
      ],
      "fleeRate": 0.1,
      "height": Object {
        "maximum": "0.68m",
        "minimum": "0.53m",
      },
      "id": "004",
      "maxCP": 841,
      "maxHP": 955,
      "name": "Charmander",
      "resistant": Array [
        "Fire",
        "Grass",
        "Ice",
        "Bug",
        "Steel",
        "Fairy",
      ],
      "types": Array [
        "Fire",
      ],
      "weaknesses": Array [
        "Water",
        "Ground",
        "Rock",
      ],
      "weight": Object {
        "maximum": "9.56kg",
        "minimum": "7.44kg",
      },
    },
    Object {
      "Previous evolution(s)": Array [
        Object {
          "id": "004",
          "name": "Charmander",
        },
      ],
      "attacks": Object {
        "fast": Array [
          Object {
            "damage": 10,
            "name": "Ember",
            "type": "Fire",
          },
          Object {
            "damage": 6,
            "name": "Scratch",
            "type": "Normal",
          },
        ],
        "special": Array [
          Object {
            "damage": 40,
            "name": "Fire Punch",
            "type": "Fire",
          },
          Object {
            "damage": 30,
            "name": "Flame Burst",
            "type": "Fire",
          },
          Object {
            "damage": 55,
            "name": "Flamethrower",
            "type": "Fire",
          },
        ],
      },
      "classification": "Flame Pokémon",
      "evolutionRequirements": Object {
        "amount": 100,
        "name": "Charmander candies",
      },
      "evolutions": Array [
        Object {
          "id": "006",
          "name": "Charizard",
        },
      ],
      "fleeRate": 0.07,
      "height": Object {
        "maximum": "1.24m",
        "minimum": "0.96m",
      },
      "id": "005",
      "maxCP": 1411,
      "maxHP": 1557,
      "name": "Charmeleon",
      "resistant": Array [
        "Fire",
        "Grass",
        "Ice",
        "Bug",
        "Steel",
        "Fairy",
      ],
      "types": Array [
        "Fire",
      ],
      "weaknesses": Array [
        "Water",
        "Ground",
        "Rock",
      ],
      "weight": Object {
        "maximum": "21.38kg",
        "minimum": "16.63kg",
      },
    },
    Object {
      "Previous evolution(s)": Array [
        Object {
          "id": "005",
          "name": "Charmeleon",
        },
        Object {
          "id": "004",
          "name": "Charmander",
        },
      ],
      "attacks": Object {
        "fast": Array [
          Object {
            "damage": 9,
            "name": "Wing Attack",
            "type": "Flying",
          },
          Object {
            "damage": 10,
            "name": "Ember",
            "type": "Fire",
          },
        ],
        "special": Array [
          Object {
            "damage": 55,
            "name": "Flamethrower",
            "type": "Fire",
          },
          Object {
            "damage": 100,
            "name": "Fire Blast",
            "type": "Fire",
          },
          Object {
            "damage": 35,
            "name": "Dragon Claw",
            "type": "Dragon",
          },
        ],
      },
      "classification": "Flame Pokémon",
      "fleeRate": 0.05,
      "height": Object {
        "maximum": "1.91m",
        "minimum": "1.49m",
      },
      "id": "006",
      "maxCP": 2413,
      "maxHP": 2602,
      "name": "Charizard",
      "resistant": Array [
        "Fire",
        "Grass",
        "Fighting",
        "Bug",
        "Steel",
        "Fairy",
      ],
      "types": Array [
        "Fire",
        "Flying",
      ],
      "weaknesses": Array [
        "Water",
        "Electric",
        "Rock",
      ],
      "weight": Object {
        "maximum": "101.81kg",
        "minimum": "79.19kg",
      },
    },
  ],
  "meta": Object {
    "count": 151,
    "limit": 3,
    "skip": 3,
  },
}
`;

exports[`AppController (e2e) should support requesting a page of pokemons filtered by type (default order is by ID) 1`] = `
Object {
  "items": Array [
    Object {
      "attacks": Object {
        "fast": Array [
          Object {
            "damage": 10,
            "name": "Ember",
            "type": "Fire",
          },
          Object {
            "damage": 6,
            "name": "Scratch",
            "type": "Normal",
          },
        ],
        "special": Array [
          Object {
            "damage": 30,
            "name": "Flame Burst",
            "type": "Fire",
          },
          Object {
            "damage": 25,
            "name": "Flame Charge",
            "type": "Fire",
          },
          Object {
            "damage": 55,
            "name": "Flamethrower",
            "type": "Fire",
          },
        ],
      },
      "classification": "Lizard Pokémon",
      "evolutionRequirements": Object {
        "amount": 25,
        "name": "Charmander candies",
      },
      "evolutions": Array [
        Object {
          "id": "005",
          "name": "Charmeleon",
        },
        Object {
          "id": "006",
          "name": "Charizard",
        },
      ],
      "fleeRate": 0.1,
      "height": Object {
        "maximum": "0.68m",
        "minimum": "0.53m",
      },
      "id": "004",
      "maxCP": 841,
      "maxHP": 955,
      "name": "Charmander",
      "resistant": Array [
        "Fire",
        "Grass",
        "Ice",
        "Bug",
        "Steel",
        "Fairy",
      ],
      "types": Array [
        "Fire",
      ],
      "weaknesses": Array [
        "Water",
        "Ground",
        "Rock",
      ],
      "weight": Object {
        "maximum": "9.56kg",
        "minimum": "7.44kg",
      },
    },
    Object {
      "Previous evolution(s)": Array [
        Object {
          "id": "004",
          "name": "Charmander",
        },
      ],
      "attacks": Object {
        "fast": Array [
          Object {
            "damage": 10,
            "name": "Ember",
            "type": "Fire",
          },
          Object {
            "damage": 6,
            "name": "Scratch",
            "type": "Normal",
          },
        ],
        "special": Array [
          Object {
            "damage": 40,
            "name": "Fire Punch",
            "type": "Fire",
          },
          Object {
            "damage": 30,
            "name": "Flame Burst",
            "type": "Fire",
          },
          Object {
            "damage": 55,
            "name": "Flamethrower",
            "type": "Fire",
          },
        ],
      },
      "classification": "Flame Pokémon",
      "evolutionRequirements": Object {
        "amount": 100,
        "name": "Charmander candies",
      },
      "evolutions": Array [
        Object {
          "id": "006",
          "name": "Charizard",
        },
      ],
      "fleeRate": 0.07,
      "height": Object {
        "maximum": "1.24m",
        "minimum": "0.96m",
      },
      "id": "005",
      "maxCP": 1411,
      "maxHP": 1557,
      "name": "Charmeleon",
      "resistant": Array [
        "Fire",
        "Grass",
        "Ice",
        "Bug",
        "Steel",
        "Fairy",
      ],
      "types": Array [
        "Fire",
      ],
      "weaknesses": Array [
        "Water",
        "Ground",
        "Rock",
      ],
      "weight": Object {
        "maximum": "21.38kg",
        "minimum": "16.63kg",
      },
    },
    Object {
      "attacks": Object {
        "fast": Array [
          Object {
            "damage": 10,
            "name": "Ember",
            "type": "Fire",
          },
          Object {
            "damage": 10,
            "name": "Quick Attack",
            "type": "Normal",
          },
        ],
        "special": Array [
          Object {
            "damage": 40,
            "name": "Body Slam",
            "type": "Normal",
          },
          Object {
            "damage": 25,
            "name": "Flame Charge",
            "type": "Fire",
          },
          Object {
            "damage": 55,
            "name": "Flamethrower",
            "type": "Fire",
          },
        ],
      },
      "classification": "Fox Pokémon",
      "evolutionRequirements": Object {
        "amount": 50,
        "name": "Vulpi",
      },
      "evolutions": Array [
        Object {
          "id": "038",
          "name": "Ninetales",
        },
      ],
      "fleeRate": 0.1,
      "height": Object {
        "maximum": "0.68m",
        "minimum": "0.53m",
      },
      "id": "037",
      "maxCP": 725,
      "maxHP": 831,
      "name": "Vulpix",
      "resistant": Array [
        "Fire",
        "Grass",
        "Ice",
        "Bug",
        "Steel",
        "Fairy",
      ],
      "types": Array [
        "Fire",
      ],
      "weaknesses": Array [
        "Water",
        "Ground",
        "Rock",
      ],
      "weight": Object {
        "maximum": "11.14kg",
        "minimum": "8.66kg",
      },
    },
  ],
  "meta": Object {
    "count": 10,
    "limit": 3,
    "skip": 0,
  },
}
`;

exports[`AppController (e2e) should support requesting a page of pokemons filtered by type and favorites 1`] = `
Object {
  "items": Array [
    Object {
      "attacks": Object {
        "fast": Array [
          Object {
            "damage": 10,
            "name": "Ember",
            "type": "Fire",
          },
          Object {
            "damage": 10,
            "name": "Quick Attack",
            "type": "Normal",
          },
        ],
        "special": Array [
          Object {
            "damage": 40,
            "name": "Body Slam",
            "type": "Normal",
          },
          Object {
            "damage": 25,
            "name": "Flame Charge",
            "type": "Fire",
          },
          Object {
            "damage": 55,
            "name": "Flamethrower",
            "type": "Fire",
          },
        ],
      },
      "classification": "Fox Pokémon",
      "evolutionRequirements": Object {
        "amount": 50,
        "name": "Vulpi",
      },
      "evolutions": Array [
        Object {
          "id": "038",
          "name": "Ninetales",
        },
      ],
      "fleeRate": 0.1,
      "height": Object {
        "maximum": "0.68m",
        "minimum": "0.53m",
      },
      "id": "037",
      "maxCP": 725,
      "maxHP": 831,
      "name": "Vulpix",
      "resistant": Array [
        "Fire",
        "Grass",
        "Ice",
        "Bug",
        "Steel",
        "Fairy",
      ],
      "types": Array [
        "Fire",
      ],
      "weaknesses": Array [
        "Water",
        "Ground",
        "Rock",
      ],
      "weight": Object {
        "maximum": "11.14kg",
        "minimum": "8.66kg",
      },
    },
    Object {
      "Previous evolution(s)": Array [
        Object {
          "id": "037",
          "name": "Vulpix",
        },
      ],
      "attacks": Object {
        "fast": Array [
          Object {
            "damage": 10,
            "name": "Ember",
            "type": "Fire",
          },
          Object {
            "damage": 10,
            "name": "Quick Attack",
            "type": "Normal",
          },
        ],
        "special": Array [
          Object {
            "damage": 100,
            "name": "Fire Blast",
            "type": "Fire",
          },
          Object {
            "damage": 55,
            "name": "Flamethrower",
            "type": "Fire",
          },
          Object {
            "damage": 80,
            "name": "Heat Wave",
            "type": "Fire",
          },
        ],
      },
      "classification": "Fox Pokémon",
      "fleeRate": 0.06,
      "height": Object {
        "maximum": "1.24m",
        "minimum": "0.96m",
      },
      "id": "038",
      "maxCP": 2015,
      "maxHP": 2188,
      "name": "Ninetales",
      "resistant": Array [
        "Fire",
        "Grass",
        "Ice",
        "Bug",
        "Steel",
        "Fairy",
      ],
      "types": Array [
        "Fire",
      ],
      "weaknesses": Array [
        "Water",
        "Ground",
        "Rock",
      ],
      "weight": Object {
        "maximum": "22.39kg",
        "minimum": "17.41kg",
      },
    },
  ],
  "meta": Object {
    "count": 2,
    "limit": 20,
    "skip": 0,
  },
}
`;
